--- a/package.json
+++ b/package.json
@@ -11,7 +11,66 @@
   },
   "dependencies": {
     "ejs": "2.4.1",
-    "express": "4.13.3"
+    "babel-core": "6.7.2",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-stage-1": "6.5.0",
+    "browser-sync": "^2.6.1",
+    "browserify": "^9.0.8",
+    "chai": "3.5.0",
+    "compression": "1.6.1",
+    "del": "^1.1.1",
+    "es6-promise": "^2.0.1",
+    "express": "4.13.4",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.6.0",
+    "gulp-data": "^1.2.1",
+    "gulp-filter": "^2.0.2",
+    "gulp-htmlmin": "^1.1.1",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-nunjucks-render": "^2.0.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-size": "^1.2.1",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-swig": "^0.7.4",
+    "gulp-uglifyjs": "^0.6.2",
+    "gulp-util": "^3.0.4",
+    "handlebars": "^3.0.1",
+    "hbsfy": "^2.2.1",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "0.2.3",
+    "karma-cli": "0.1.2",
+    "karma-firefox-launcher": "0.1.7",
+    "karma-mocha": "0.2.2",
+    "karma-nyan-reporter": "0.2.4",
+    "karma-sinon-chai": "1.2.0",
+    "karma-webpack": "1.7.0",
+    "lodash": "4.6.1",
+    "lolex": "1.4.0",
+    "merge-stream": "^0.1.7",
+    "mocha": "2.4.5",
+    "morgan": "1.7.0",
+    "object-assign": "4.0.1",
+    "open": "0.0.5",
+    "pretty-hrtime": "1.0.2",
+    "require-dir": "0.3.0",
+    "run-sequence": "^1.0.2",
+    "serve-favicon": "^2.3.2",
+    "serviceworker-cache-polyfill": "^3.0.0",
+    "sinon": "1.17.3",
+    "sinon-chai": "2.8.0",
+    "sw-precache": "^4.2.1",
+    "through2": "^0.6.5",
+    "uglifyify": "^3.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.1.0",
+    "webpack": "1.12.14",
+    "webpack-dev-middleware": "1.5.1",
+    "webpack-hot-middleware": "2.10.0",
+    "whatwg-fetch": "^0.7.0"
   },
   "repository": {
     "type": "git",
